Fix container_commands working directory for migrations

--- a/.ebextensions/01_django.config
+++ b/.ebextensions/01_django.config
@@ -7,12 +7,12 @@ option_settings:
 
 container_commands:
   01_migrate:
-    command: "source $PYTHONHOME/activate && python manage.py migrate --noinput"
+    command: "source $PYTHONHOME/activate && cd /var/app/staging && python manage.py migrate --noinput"
     leader_only: true
   02_collectstatic:
-    command: "source $PYTHONHOME/activate && python manage.py collectstatic --noinput"
+    command: "source $PYTHONHOME/activate && cd /var/app/staging && python manage.py collectstatic --noinput"
     leader_only: true
   03_createsu:
-    command: "source $PYTHONHOME/activate && python manage.py createsu"
+    command: "source $PYTHONHOME/activate && cd /var/app/staging && python manage.py createsu"
     leader_only: true
     ignoreErrors: true
