--- a/requirements.txt
+++ b/requirements.txt
@@ -43,3 +43,9 @@ typing_extensions==4.15.0
 urllib3==2.5.0
 gunicorn==23.0.0
 whitenoise==6.6.0
+
+# Testing and Code Quality
+black>=23.0.0
+flake8>=6.0.0
+coverage>=7.0.0
+coveralls>=3.3.0
