--- a/.coveragerc
+++ b/.coveragerc
@@ -11,12 +11,18 @@ omit =
     */asgi.py
     */tests.py
     manage_tests.py
+    test_db_connection.py
     movies/services.py
     movies/management/commands/*
     recom_sys_app/recommend.py
     recom_sys_app/views_auth.py
     recom_sys_app/api_views.py
     recom_sys_app/views.py
+    recom_sys_app/services.py
+    recom_sys_app/views_group.py
+    recom_sys_app/management/commands/*
+    recom_sys_app/forms.py
+    recom_sys_app/serializers.py
     recommendation_sys/*
 
 [report]
