--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ install:
 # Pre-submit CI - runs on every push
 script:
   # Run black for code formatting
-  - black --check --diff .
+  - black --check .
 
   # Run flake8 for linting
   - flake8 . --max-line-length=120 --exclude=migrations,__pycache__,venv,env --config=.flake8
