--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_install:
 install:
   - pip install --upgrade pip
   - pip install -r requirements.txt
-  - pip install black flake8 coverage coveralls
+  - pip install black flake8 coverage coveralls bandit
 
 # Pre-submit CI - runs on every push
 script:
@@ -42,6 +42,9 @@ script:
 
   # Run flake8 for linting
   - flake8 . --max-line-length=120 --exclude=migrations,__pycache__,venv,env --config=.flake8
+
+  # Run bandit for security linting
+  - bandit -r . -x migrations,__pycache__,venv,env -ll
 
   # Run Django migrations
   - python manage.py makemigrations
