--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,22 @@ python:
 # Services
 services:
   - postgresql
+  - redis-server  # ✨ Add Redis support for WebSocket testing
 
 # Environment variables
 env:
-  - DJANGO_VERSION=5.2.6
-  - POSTGRES_DB=cinematch_test
-  - POSTGRES_USER=postgres
-  - POSTGRES_PASSWORD=postgres
+  global:
+    - DJANGO_VERSION=5.2.6
+    - POSTGRES_DB=cinematch_test
+    - POSTGRES_USER=postgres
+    - POSTGRES_PASSWORD=postgres
+    - DJANGO_SETTINGS_MODULE=recommendation_sys.settings
+    - SECRET_KEY=test-secret-key-for-travis
 
 # Cache dependencies
 cache:
-  - pip
+  directories:
+    - $HOME/.cache/pip
 
 # Before install
 before_install:
@@ -33,6 +38,8 @@ before_install:
 install:
   - pip install --upgrade pip
   - pip install -r requirements.txt
+  # ✨ Add test dependencies
+  - pip install pytest pytest-django pytest-asyncio pytest-cov channels-testing
   - pip install black flake8 coverage coveralls
 
 # Pre-submit CI - runs on every push
@@ -49,8 +56,12 @@ script:
 
   # Run unit tests with coverage
   - coverage run --source='recom_sys_app' manage.py test recom_sys_app
+
+  # Run all pytest tests
+  - pytest recom_sys_app/ -v --cov=recom_sys_app
+
+  # 7. Check coverage threshold
   - coverage report --fail-under=85
-  - coverage xml
 
 # Send coverage to Coveralls
 after_success:
@@ -87,4 +98,3 @@ notifications:
       - your-team-email@example.com  # Update with actual team email
     on_success: change
     on_failure: always
-
