--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,7 @@ addopts =
     --tb=short
     --strict-markers
     --disable-warnings
+    --ignore=test_db_connection.py
 markers =
     asyncio: mark test as async
     django_db: mark test as requiring database access
